fix clipping screenshot image curve from borders

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -508,15 +508,14 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px;
 }
 
 .swiper-slide img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     display: block;
-    border-radius: 20px;
+    border-radius: 25px;
 }
 
 .swiper-slide:not(.swiper-slide-active) {
